cicd-pipeline/templates/golang/tekton/ingress/github-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: github-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(github.cicd.psbulap.com) 
      services:
        - kind: Service
          name: el-github-pr
          port: 8080
  tls:
    secretName: github-tls-staging
