cicd-pipeline/templates/golang/tekton/ingress/golang-ingress-argocd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-argo
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
     - host: whitelotus.development.ns0.civo.com #host dns
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: argocd-server
              servicePort: 443
