cicd-pipeline/templates/golang/tekton/ingress/golang-ingress-tekton.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tekton
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
     - host: whitelotus.development.ns1.civo.com #host dns
       http:
        paths:
          - path: /
            pathType: Exact
            backend:
              serviceName: tekton-dashboard
              servicePort: 9097
