cicd-pipeline/templates/golang/tekton/ingress/golang-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-github
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
     - host: psbonline-github.development.ns1.civo.com #host dns
       http:
        paths:
          - path: /hooks
            pathType: Exact
            backend:
              serviceName: el-github-pr
              servicePort: 8080
