cicd-pipeline/templates/golang/tekton/ingress/tekton-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-ingressroute
  namespace: tekton-pipelines
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tekton-dev.cicd.psbulap.com`) 
      services:
        - kind: Service
          name: tekton-dashboard
          namespace: tekton-pipelines
          port: 9097
  tls:
    secretName: tekton-tls-staging
